Introduce a new environment 'rbtabular' to make all the tables look the same. See comments in preable.tex. Next step will be to define btnmap and tagmap via this environment.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22503 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -6,7 +6,7 @@
 % for the html output.
 \ifpdfoutput{\newcommand{\localendhead}{\endhead}}%
     {\newcommand{\localendhead}{}}
-  \rowcolors{1}{}{tblrowbgcolor}
+  \rowcolors{1}{tblevenrowbgcolor}{tbloddrowbgcolor}
   \begin{longtable}{@{}>{\raggedright}p{.35\textwidth}@{}>{\raggedright}p{.4\textwidth}@{}p{.25\textwidth}@{}}
     \toprule
     \rowcolor{white} \textbf{Setting} & \textbf{Allowed Values} & \textbf{Unit}\\
