--- a/manual/configure_rockbox/recording_settings.tex
+++ b/manual/configure_rockbox/recording_settings.tex
@@ -19,15 +19,13 @@
     and the average bitrate changes as follows.
   
   \begin{table}[h!]
-    \begin{center}
-      \begin{tabularx}{0.75\textwidth}{lX}\toprule
-        \emph{Frequency} & \emph{Bitrate} (Kbit/s) -- quality 0$\rightarrow$7 \\\midrule
+      \begin{rbtabular}{0.75\textwidth}{lX}%
+        {\emph{Frequency} & \emph{Bitrate} (Kbit/s) -- quality 0$\rightarrow$7}{}{}
         44100Hz stereo   & 75, 80, 90, 100, 120, 140, 160, 170 \\
         22050Hz stereo   & 39, 41, 45, 50,  60,  80,  110, 130 \\
         44100Hz mono     & 65, 68, 73, 80,  90,  105, 125, 140 \\
-        22050Hz mono     & 35, 38, 40, 45,  50,  60,  75,  90 \\\bottomrule
-      \end{tabularx}
-    \end{center}
+        22050Hz mono     & 35, 38, 40, 45,  50,  60,  75,  90 \\
+      \end{rbtabular}
   \end{table}
 }
 
