--- a/manual/getting_started/archos_choice.tex
+++ b/manual/getting_started/archos_choice.tex
@@ -8,10 +8,9 @@ identify which version of the software you need.
 The model name is printed on the case.  The hard drive size is listed on the
 serial number sticker on the back of the unit.
 
-\begin{center}
-  \begin{tabularx}{\textwidth}{llXl}\toprule
-    \label{ref:Jukeboxtypetable}
-    \textbf{Picture} & \textbf{Disk size} & \textbf{Model Name} & \textbf{Version Name} \\\midrule
+\begin{rbtabular}{\textwidth}{llXl}%
+    {\textbf{Picture} & \textbf{Disk size} & \textbf{Model Name} & \textbf{Version Name}}%
+    {}{ref:Jukeboxtypetable}
     \begin{minipage}{2.2cm}
       \includegraphics[width=2cm]{getting_started/images/archos-studio-small.png}
     \end{minipage} 
@@ -48,8 +47,7 @@ serial number sticker on the back of the unit.
     \begin{minipage}{2.2cm}
       \includegraphics[width=2cm]{getting_started/images/archos-ondiofm-small.png}
     \end{minipage}
-                     & 128MB (flash) & Ondio 128 FM & ondiofm \\\bottomrule
-  \end{tabularx}
-\end{center}
+                     & 128MB (flash) & Ondio 128 FM & ondiofm \\
+\end{rbtabular}
 \note{Rockbox does not run on the Archos Jukebox Multimedia or any
 Archos products other than those mentioned here.}
