--- a/manual/plugins/brickmania.tex
+++ b/manual/plugins/brickmania.tex
@@ -8,19 +8,16 @@ effect, you must catch it with the paddle. Look out for the bad ones.\\
 
 \subsubsection{Special items}
 \begin{table}
-    \begin{center}
-    \rowcolors{1}{}{tblrowbgcolor}
-    \begin{tabularx}{.75\textwidth}{clX}\toprule
-    \textbf{Displayed} & \textbf{Name} & \textbf{Description}\\\midrule
+    \begin{rbtabular}{.75\textwidth}{clX}%
+        {\textbf{Displayed} & \textbf{Name} & \textbf{Description}}{}{}
     N & Normal & Returns paddle to normal.\\
     D & Die & Ball dies; lose a life.\\
     L & Life & Gain a life.\\
     F & Fire & Allows you to shoot bricks with paddle.\\
     G & Glue & Ball sticks to paddle each time it hits.\\
     B & Ball & Immediately fires another ball.\\
-    FL & Flip & Flip left / right movement.\\\bottomrule
-    \end{tabularx}
-    \end{center}
+    FL & Flip & Flip left / right movement.\\
+    \end{rbtabular}
 \end{table}
 
 \begin{table}
