--- a/manual/plugins/pacbox.tex
+++ b/manual/plugins/pacbox.tex
@@ -10,18 +10,14 @@ Pacbox is an emulator of the Pacman arcade machine hardware. It is a port of
 To use the emulator to play Pacman, you need a copy of ROMs for 
 ``Midway Pacman''.
 \begin{table}
-\begin{center}
-  \rowcolors{1}{}{tblrowbgcolor}
-  \begin{tabular}{ll}\toprule
-    \textbf{Filename} & \textbf{MD5 checksum}\\\midrule
+  \begin{rbtabular}{0.8\textwidth}{lX}{\textbf{Filename} & \textbf{MD5 checksum}}{}{}
     pacman.5e & 2791455babaf26e0b396c78d2b45f8f6\\
     pacman.5f & 9240f35d1d2beee0ff17195653b5e405\\
     pacman.6e & 290aa5eae9e2f63587b5dd5a7da932da\\
     pacman.6f & 19a886fcd8b5e88b0ed1b97f9d8659c0\\
     pacman.6h & d7cce8bffd9563b133ec17ebbb6373d4\\
-    pacman.6j & 33c0e197be4c787142af6c3be0d8f6b0\\\bottomrule
-  \end{tabular}
-\end{center}
+    pacman.6j & 33c0e197be4c787142af6c3be0d8f6b0\\
+  \end{rbtabular}
 \end{table}
 
 These need to be stored in the \fname{/.rockbox/pacman/} directory on your 
