--- a/manual/configure_rockbox/file_view.tex
+++ b/manual/configure_rockbox/file_view.tex
@@ -29,12 +29,8 @@ displays files.
   \newline\setting{As digits} disables this algorithm, and causes every digit to
   be compared separately. The following table demonstrates the two sortings.
   \begin{table}
-  \begin{center}  
-  \rowcolors{1}{}{tblrowbgcolor}
-    \begin{tabularx}{.8\textwidth}{XX}
-    \toprule
-      \textbf{As whole numbers} & \textbf{As digits}\\
-      \midrule  
+    \begin{rbtabular}{.8\textwidth}{XX}%
+      {\textbf{As whole numbers} & \textbf{As digits}}{}{}
       03 Jackson.mp3 & 03 Jackson.mp3\\
       1 Ring Of Fire.mp3 & 1 Ring Of Fire.mp3\\
       2 I Walk The Line.mp3 & 10 A Thing Called Love.mp3\\
@@ -42,9 +38,7 @@ displays files.
       Episode 1.ogg & Episode 1.ogg\\
       Episode 57.ogg & Episode 233.ogg\\
       Episode 233.ogg & Episode 57.ogg\\
-      \bottomrule
-    \end{tabularx}
-  \end{center}
+    \end{rbtabular}
   \end{table}
 
   
