Fix one row breaking across two lines (for colours) issue for ipod and sansa brickmania manual entry
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22505 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/brickmania.tex
+++ b/manual/plugins/brickmania.tex
@@ -25,7 +25,7 @@ effect, you must catch it with the paddle. Look out for the bad ones.\\
     \ButtonLeft\ / \ButtonRight
     \opt{SANSA_C200_PAD}{\\
         \ButtonVolDown\ / \ButtonVolUp}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\\
+    \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{
         \ButtonScrollBack\ / \ButtonScrollFwd}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Moves the paddle\\
