--- a/manual/preamble.tex
+++ b/manual/preamble.tex
@@ -61,9 +61,9 @@
 \newcommand{\fixme}[1]{\textbf{\textcolor{red}{#1}}}
 
 % Colors used to typeset table headers and alternating table rows
-\colorlet{tblhdrbgcolor}{white} % Background color for headers
-\colorlet{tbloddrowbgcolor}{white} % Background color for odd rows (headers not included)
-\colorlet{tblevenrowbgcolor}{blue!15} % Background color for even rows (headers not included)
+\colorlet{tblhdrbgcolor}{blue!30} % Background color for headers
+\colorlet{tbloddrowbgcolor}{blue!10} % Background color for odd rows (headers not included)
+\colorlet{tblevenrowbgcolor}{white} % Background color for even rows (headers not included)
 
 \usepackage{fancyhdr}
 \usepackage{graphicx}
