Fully fill the table headers with color
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22509 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/preamble.tex
+++ b/manual/preamble.tex
@@ -102,6 +102,9 @@
 \setlength{\headheight}{18.5pt}
 \newcounter{example}[chapter]
 
+\setlength{\belowrulesep}{0pt}
+\setlength{\aboverulesep}{0pt}
+
 %% \newenvironment{example}
 %%     {\stepcounter{example}\paragraph{Example \theexample:}}
 %%     {\hfill$\Box$
@@ -233,7 +236,7 @@
   }
   \center
   \tabularx{#1}{#2}\toprule\rowcolor{tblhdrbgcolor}
-  #3\\\midrule
+  \rule{0pt}{2.9ex}#3\\\midrule
 }{%
   \endtabularx
 }
@@ -242,7 +245,7 @@
 
 
 % command to set the default table heading for button lists
-\newcommand{\taghead}{\textbf{Tag} & \textbf{Description} \\\midrule}
+\newcommand{\taghead}{\rule{0pt}{2.9ex}\textbf{Tag} & \textbf{Description} \\\midrule}
 
 % environment intended to be used with tag maps (for wps)
 % usage: \begin{tagmap}{caption}{label} Tag & Description \\ \end{tagmap}
@@ -379,7 +382,7 @@
     % here is the table width defined for 2 columns
     \tabularx{.75\textwidth}{>{\raggedright\arraybackslash}p{.22\textwidth}X}\toprule\rowcolor{tblhdrbgcolor}
   }
-  \btnhead
+  \rule{0pt}{2.9ex}\btnhead
 }{%
   \endtabularx
 }
