--- a/manual/plugins/pngviewer.tex
+++ b/manual/plugins/pngviewer.tex
@@ -1,10 +1,10 @@
 % $Id: $id$ %
 \subsection{PNG viewer}
-Open a PNG file in the \setting{File Browser} to view it%
+Open a PNG file in the \setting{File Browser} to view it.\\%
 \opt{swcodec}{
   \note{When an audio file is playing the size of the image is limited as 
   the decoding process needs to share memory with audio tracks. To be able to
-  view a bigger file you may need to stop playback.}
+  view a bigger file you may need to stop playback.\\}
 }
 \nopt{large_plugin_buffer}{%
 \note{This plugin will cause playback to stop.}%
