--- a/manual/working_with_playlists/main.tex
+++ b/manual/working_with_playlists/main.tex
@@ -40,7 +40,7 @@ Rockbox can create playlists in four different ways.
 Whenever a song is selected from the \setting{File Browser} with
 \ActionTreeEnter, Rockbox will automatically create a playlist containing
 all of the songs in that directory and start playback with the selected
-song.
+song.\\
 
 \note{If you already have created a dynamic playlist, playing a new
   song will \emph{erase} the current dynamic playlist and create a new one.
@@ -60,7 +60,7 @@ that are not currently playing. To do this select \setting{Playlist catalog}
 in the \setting{Context Menu}. There you will have two choices,
 \setting{Add to playlist} adds the selected track or directory to an existing
 playlist and \setting{Add to a new playlist} creates a new playlist containing
-the selected track or directory.
+the selected track or directory.\\
 
 \note{All playlists in the \setting{Playlist catalog} are stored by default
   in the \fname{/Playlists} directory in the root of your \daps{} disk and
@@ -121,17 +121,17 @@ entire directories to a playlist. If the \setting{Playlist Submenu} is
 invoked on a single track, it will put only that track into the playlist.
 On the other hand, if the \setting{Playlist Submenu} is invoked on a
 directory, Rockbox adds all of the tracks in that directory to the
-playlist.
+playlist.\\
 
 \note{You can control whether or not Rockbox includes the contents of 
   subdirectories when adding an entire directory to a playlists. Set the
   \setting{Settings $\rightarrow$ General Settings $\rightarrow$ Playlist
   $\rightarrow$ Recursively Insert Directories} setting to \setting{Yes} if
   you would like Rockbox to include tracks in subdirectories as well as tracks
-  in the currently-selected directory.}
+  in the currently-selected directory.\\}
 
 Dynamic playlists are saved so resume will restore them exactly as they
-were before shutdown.
+were before shutdown.\\
 
 \note{To view, save or reshuffle the current dynamic playlist use the
   \setting{Playlist} sub menu in the WPS context menu or in the
