--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -6,7 +6,7 @@ This means you cannot switch back and forth between a plugin and Rockbox. When
 a plugin is loaded, you need to exit it to return to the Rockbox interface.
 Most plugins will not interfere with music playback but some of them will stop
 playback while running. Plugins have the file extension \fname{.rock}. Most of
-them can be started from \setting{Browse Plugins} in the \setting{Main Menu}.
+them can be started from \setting{Browse Plugins} in the \setting{Main Menu}.\\
 
 Viewer plugins get started automatically by opening an associated file (i.e.
 text files%
