--- a/manual/plugins/ppmviewer.tex
+++ b/manual/plugins/ppmviewer.tex
@@ -1,11 +1,8 @@
 % $Id$ %
 \subsection{PPM viewer}
-Open a PPM file in the \setting{File Browser} to view it.
+Open a PPM file in the \setting{File Browser} to view it. PPM viewer exits
+when any button is pressed.\\
 
-ppmviewer exits when any button is pressed.
-
-\note{
-Both ASCII PPM (P3) and raw PPM (P6) files are supported.
-
-For more information about PPM files, see \url{http://netpbm.sourceforge.net/doc/ppm.html}
-}
+\note{Both ASCII PPM (P3) and raw PPM (P6) files are supported.
+For more information about PPM files, see
+\url{http://netpbm.sourceforge.net/doc/ppm.html}}
