--- a/manual/rockbox_interface/browsing_and_playing.tex
+++ b/manual/rockbox_interface/browsing_and_playing.tex
@@ -121,12 +121,12 @@ the \setting{Show Files} setting to all.
 
 The \setting{Context Menu} allows you to perform certain operations on files or 
 directories.  To access the \setting{Context Menu}, position the selector over a file 
-or directory and access the context menu with \ActionStdContext{}.
+or directory and access the context menu with \ActionStdContext{}.\\
 
 \note{The \setting{Context Menu} is a context sensitive menu.  If the 
 \setting{Context Menu} is invoked on a file, it will display options available 
 for files.  If the \setting{Context Menu} is invoked on a directory, 
-it will display options for directories.}
+it will display options for directories.\\}
 
 The \setting{Context Menu} contains the following options (unless otherwise noted, 
 each option pertains both to files and directories):
